--- a/site/themes/sogilis/layouts/index.html
+++ b/site/themes/sogilis/layouts/index.html
@@ -1,10 +1,8 @@
 {{ define "main" }}
-    <div class="blog_index">
-        <div class="row">
-            {{ range (where .Site.AllPages.ByDate "Kind" "page").Reverse }}
-                {{ .Render "summary" }}
-            {{ end }}
-        </div>
+    <div id="blog_index" class="container">
+        {{ range (where .Site.AllPages.ByDate "Kind" "page").Reverse }}
+        {{ .Render "summary" }}
+        {{ end }}
     </div>
 {{ end }}
 
