--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -27,7 +27,7 @@
                 {{ with $.Site.Params.twitter }}
                 <a class="liens_sociaux twitter" href="{{ . }}">
                     <svg version="1.1"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         x="0px" y="0px" width="27.1px" height="22.1px" viewBox="0 0 27.1 22.1" style="enable-background:new 0 0 27.1 22.1;"
                         xml:space="preserve">
                     <defs>
@@ -48,7 +48,7 @@
                 {{ with $.Site.Params.linkedin }}
                 <a class="liens_sociaux" href="{{ . }}">
                     <svg version="1.1"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                         x="0px" y="0px" width="25.2px" height="24px" viewBox="0 0 25.2 24" style="enable-background:new 0 0 25.2 24;"
                         xml:space="preserve">
                     <defs>
@@ -166,7 +166,7 @@
 
 
 <!-- Change class header Tablet and Desktop when user is scrolling -->
-<script type="text/javascript">
+<script>
     $(function() {
         //caches a jQuery object containing the header element
         var header = $(".content_header");
@@ -183,7 +183,7 @@
 </script>
 
 <!-- Change class header Mobile  when user is scrolling -->
-<script type="text/javascript">
+<script>
     $(function() {
         //caches a jQuery object containing the header element
         var header = $(".content-menu-mobile");
