--- a/site/themes/sogilis/layouts/partials/head.html
+++ b/site/themes/sogilis/layouts/partials/head.html
@@ -19,9 +19,9 @@
         {{ $head := resources.Get "css/header.css" | minify | fingerprint }}
         <link rel="stylesheet" href="{{ $head.Permalink }}" type="text/css" />
 
-        <script src="{{ "js/jquery-3.3.1.min.js" | relURL }}" type="text/javascript"></script>
-        <script src="{{ "js/aos.js" | relURL }}" charset="utf-8" type="text/javascript"></script>
-        <script src="{{ "js/js.cookie-2.0.4.min.js" | relURL }}" charset="utf-8" type="text/javascript"></script>
+        <script src="{{ "js/jquery-3.3.1.min.js" | relURL }}"></script>
+        <script src="{{ "js/aos.js" | relURL }}"></script>
+        <script src="{{ "js/js.cookie-2.0.4.min.js" | relURL }}"></script>
         <script src="{{ "js/bootstrap-4.0.0.min.js" | relURL }}"></script>
 
         <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}"/>
