Fix #108 css-grid was not displayed correctly on Webkit and Blink

--- a/site/themes/sogilis/assets/css/footer.css
+++ b/site/themes/sogilis/assets/css/footer.css
@@ -96,7 +96,7 @@ footer > #sofooter {
         grid-template-areas:
             'sofooterContactgridTitle      sofooterContactgridTitle          sofooterContactgridTitle     sofooterContactgridTitle'
             'sofooterContactgridContactus  sofooterContactgridSocialnetwork  sofooterContactgridGrenoble  sofooterContactgridLyon';
-        grid-template-columns: initial;
+        grid-template-columns: auto;
     }
 
 }
