--- a/site/themes/sogilis/layouts/_default/baseof.html
+++ b/site/themes/sogilis/layouts/_default/baseof.html
@@ -3,7 +3,7 @@
     {{- partial "head.html" . -}}
     <body>
         {{- partial "header.html" . -}}
-        <main id="content">
+        <main class="container">
         {{- block "main" . }}{{- end }}
         </main>
         {{- partial "footer.html" . -}}
