--- a/site/themes/sogilis/layouts/_default/single.html
+++ b/site/themes/sogilis/layouts/_default/single.html
@@ -1,49 +1,47 @@
 {{ define "main" }}
 
-<main>
-    <div class="container blog_article">
+<div class="blog_article">
 
-        <div class="row header">
-            <div class="col-12 offset-1 col-sm-6 offset-sm-0 col-md-6 col-lg-6">
-                {{ with .Params.image }}
-                    <img alt="Illustration de l'article" src="{{ . | relURL }}">
-                {{ else }}
-                    <img alt="Illustration de l'article" src="{{ "images/blog_preview_default.jpg" | relURL }}">
-                {{ end }}
-            </div>
-            <div class="col-11 offset-2 col-sm-6 offset-sm-0 col-md-5 col-lg-4 article_title">
-                <h1>{{ .Title }}</h1>
-                <p>
-                    {{ i18n "writtenBy" }}
-                    {{- with .Params.Author }}
-                        {{ . }}
-                    {{- else }}
-                        {{ .Site.Params.Author }}
-                    {{- end }}
-                    <br />
-                    <time class="post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}">
-                        {{ i18n "publishdate" . }}
-                    </time>
-                </p>
-            </div>
+    <div class="row header">
+        <div class="col-12 offset-1 col-sm-6 offset-sm-0 col-md-6 col-lg-6">
+            {{ with .Params.image }}
+                <img alt="Illustration de l'article" src="{{ . | relURL }}">
+            {{ else }}
+                <img alt="Illustration de l'article" src="{{ "images/blog_preview_default.jpg" | relURL }}">
+            {{ end }}
         </div>
-
-
-        <div class="row content">
-             <div class="col-12">
-                {{ .Content }}
-            </div>
-        </div>
-
-        {{ with .Params.image }}
-            <img alt="Illustration de l'article" src="{{ . | relURL }}">
-        {{ else }}
-            <img alt="Illustration de l'article" src="{{ "images/blog_preview_default.jpg" | relURL }}">
-        {{ end }}
-
-        <div class="comments">
-            {{ template "_internal/disqus.html" . }}
+        <div class="col-11 offset-2 col-sm-6 offset-sm-0 col-md-5 col-lg-4 article_title">
+            <h1>{{ .Title }}</h1>
+            <p>
+                {{ i18n "writtenBy" }}
+                {{- with .Params.Author }}
+                    {{ . }}
+                {{- else }}
+                    {{ .Site.Params.Author }}
+                {{- end }}
+                <br />
+                <time class="post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}">
+                    {{ i18n "publishdate" . }}
+                </time>
+            </p>
         </div>
     </div>
-</main>
+
+
+    <div class="row content">
+            <div class="col-12">
+            {{ .Content }}
+        </div>
+    </div>
+
+    {{ with .Params.image }}
+        <img alt="Illustration de l'article" src="{{ . | relURL }}">
+    {{ else }}
+        <img alt="Illustration de l'article" src="{{ "images/blog_preview_default.jpg" | relURL }}">
+    {{ end }}
+
+    <div class="comments">
+        {{ template "_internal/disqus.html" . }}
+    </div>
+</div>
 {{ end }}
