--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -1,22 +1,18 @@
-<header class="content_header">
-    <div class="container">
+<header class="container">
+    <a id="soheaderLogo" href="index.html">
+        <img alt="Logo Sogilis" src="{{ "images/logo_sogilis.svg" | relURL }}">
+    </a>
 
-        <div id="soheaderLogo">
-            <a href="index.html"><img alt="Logo Sogilis" src="{{ "images/logo_sogilis.svg" | relURL }}"></a>
-        </div>
-
-        <nav id="soheaderNav">
-            <div class="dropdown">
-                <button class="dropbtn">{{ i18n "services"}}</button>
-                <div class="dropdown-content">
-                    <a href="https://sogilis.fr/services-applications-cloud-native.html">{{ i18n "cloudNativeApplications" }}</a>
-                    <a href="https://sogilis.fr/services-embarques-et-iot.html">{{ i18n "embeddedSoftwares" }}</a>
-                    <a href="https://sogilis.fr/services-logiciels-critiques.html">{{ i18n "criticalSoftwares" }}</a>
-                </div>
+    <nav>
+        <div class="dropdown">
+            <button class="dropbtn">{{ i18n "services"}}</button>
+            <div class="dropdown-content">
+                <a href="https://sogilis.fr/services-applications-cloud-native.html">{{ i18n "cloudNativeApplications" }}</a>
+                <a href="https://sogilis.fr/services-embarques-et-iot.html">{{ i18n "embeddedSoftwares" }}</a>
+                <a href="https://sogilis.fr/services-logiciels-critiques.html">{{ i18n "criticalSoftwares" }}</a>
             </div>
-            <a href="https://sogilis.fr/vision.html" class="menu_link_1">{{ i18n "ourVision" }}</a>
-            <a href="https://sogilis.fr/contact.html" class="menu_link_2">{{ i18n "contact" }}</a>
-        </nav>
-
-    </div>
+        </div>
+        <a href="https://sogilis.fr/vision.html">{{ i18n "ourVision" }}</a>
+        <a href="https://sogilis.fr/contact.html">{{ i18n "contact" }}</a>
+    </nav>
 </header>
