[UI] fix card display problem on Chromium and Safari (Fix #122 )

--- a/site/themes/sogilis/assets/css/header.css
+++ b/site/themes/sogilis/assets/css/header.css
@@ -12,6 +12,7 @@ header {
     margin-top: 2rem;
     left: 50%;
     transform: translateX(-50%);
+    /* TODO Following could be deleted when Bootstrap will be deleted */
     box-sizing: content-box;
 }
 
