--- a/site/themes/sogilis/layouts/_default/summary.html
+++ b/site/themes/sogilis/layouts/_default/summary.html
@@ -1,9 +1,15 @@
 <a href="{{ .Permalink }}" class="blog_index_article">
-    {{ with .Params.image }}
-    <img alt="Illustration de l'article" src="{{ . | relURL }}">
-    {{ else }}
-    <img alt="Illustration de l'article" src="{{ "images/blog_preview_default.jpg" | relURL }}">
-    {{ end }}
+    <div>
+        <!-- Should be inner a div tag -->
+        <!-- Otherwise "CSS Grid, grid item “height: 100%” not working in Chrome" -->
+        <!-- (like in Safari) -->
+        <!-- See https://stackoverflow.com/questions/50691765/css-grid-grid-item-height-100-not-working-in-chrome -->
+        {{ with .Params.image }}
+        <img alt="Illustration de l'article" src="{{ . | relURL }}">
+        {{ else }}
+        <img alt="Illustration de l'article" src="{{ "images/blog_preview_default.jpg" | relURL }}">
+        {{ end }}
+    </div>
     <h1 class="title_name">{{ .Title }}</h1>
     <p>{{ i18n "readMore" }}…</p>
 </a>
