--- a/site/themes/sogilis/assets/css/header.css
+++ b/site/themes/sogilis/assets/css/header.css
@@ -8,7 +8,7 @@ header {
     display: flex;
     position: fixed;
     z-index: 200;
-    height: 4rem;
+    height: 3rem;
     margin-top: 2rem;
     left: 50%;
     transform: translateX(-50%);
@@ -31,6 +31,10 @@ header.content_header_scroll {
 
 header > a#soheaderLogo {
     width: 15%;
+}
+
+header > a > img {
+    height: 100%;
 }
 
 /* Navigation links, on the right */
