Fix flying header does not 100% width (Fix #117)

--- a/site/themes/sogilis/layouts/index.html
+++ b/site/themes/sogilis/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-    <div id="blog_index" class="container">
+    <div id="blog_index">
         {{ range (where .Site.AllPages.ByDate "Kind" "page").Reverse }}
         {{ .Render "summary" }}
         {{ end }}
