--- a/site/themes/sogilis/layouts/partials/header.html
+++ b/site/themes/sogilis/layouts/partials/header.html
@@ -1,18 +1,20 @@
-<header class="container">
-    <a id="soheaderLogo" href="index.html">
-        <img alt="Logo Sogilis" src="{{ "images/logo_sogilis.svg" | relURL }}">
-    </a>
+<header>
+    <div class="container">
+        <a id="soheaderLogo" href="index.html">
+            <img alt="Logo Sogilis" src="{{ "images/logo_sogilis.svg" | relURL }}">
+        </a>
 
-    <nav>
-        <div class="dropdown">
-            <button class="dropbtn">{{ i18n "services"}}</button>
-            <div class="dropdown-content">
-                <a href="https://sogilis.fr/services-applications-cloud-native.html">{{ i18n "cloudNativeApplications" }}</a>
-                <a href="https://sogilis.fr/services-embarques-et-iot.html">{{ i18n "embeddedSoftwares" }}</a>
-                <a href="https://sogilis.fr/services-logiciels-critiques.html">{{ i18n "criticalSoftwares" }}</a>
+        <nav>
+            <div class="dropdown">
+                <button class="dropbtn">{{ i18n "services"}}</button>
+                <div class="dropdown-content">
+                    <a href="https://sogilis.fr/services-applications-cloud-native.html">{{ i18n "cloudNativeApplications" }}</a>
+                    <a href="https://sogilis.fr/services-embarques-et-iot.html">{{ i18n "embeddedSoftwares" }}</a>
+                    <a href="https://sogilis.fr/services-logiciels-critiques.html">{{ i18n "criticalSoftwares" }}</a>
+                </div>
             </div>
-        </div>
-        <a href="https://sogilis.fr/vision.html">{{ i18n "ourVision" }}</a>
-        <a href="https://sogilis.fr/contact.html">{{ i18n "contact" }}</a>
-    </nav>
+            <a href="https://sogilis.fr/vision.html">{{ i18n "ourVision" }}</a>
+            <a href="https://sogilis.fr/contact.html">{{ i18n "contact" }}</a>
+        </nav>
+    </div>
 </header>
