--- a/site/themes/sogilis/assets/css/header.css
+++ b/site/themes/sogilis/assets/css/header.css
@@ -6,14 +6,13 @@
 
 header {
     display: flex;
+    justify-content: center;
     position: fixed;
     z-index: 200;
-    height: 3rem;
+    width: 100%;
+    height: 5rem;
     margin-top: 2rem;
-    left: 50%;
-    transform: translateX(-50%);
-    /* TODO Following could be deleted when Bootstrap will be deleted */
-    box-sizing: content-box;
+    box-sizing: border-box;
 }
 
 /* When we scroll */
@@ -25,22 +24,29 @@ header.content_header_scroll {
     padding: 1rem 2rem;
 }
 
+header > div.container {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    margin-right: -1.5rem;
+}
 
 /* Logo sogilis on the left */
 /* ======================== */
 
-header > a#soheaderLogo {
+header > div.container > a#soheaderLogo {
     width: 15%;
 }
 
-header > a > img {
+header > div.container > a > img {
     height: 100%;
 }
 
 /* Navigation links, on the right */
 /* ============================== */
 
-header >  nav {
+header > div.container >  nav {
     flex: 1 1 0;
     display: flex;
     justify-content: flex-end;
@@ -49,8 +55,8 @@ header >  nav {
     font-size: 0.9rem;
 }
 
-header > nav a[href],
-header > nav button {
+header > div.container > nav a[href],
+header > div.container > nav button {
     position: relative;
     border: unset;
     padding: 0;
@@ -62,18 +68,18 @@ header > nav button {
     cursor: pointer;
 }
 
-header > nav > a {
+header > div.container > nav > a {
     margin-left: 4rem;
 }
 
-header > nav > a,
-header > nav > div.dropdown > button {
+header > div.container > nav > a,
+header > div.container > nav > div.dropdown > button {
     /* TODO $wolf-blue when transform this file to SCSS */
     color: #016099;
 }
 
 /* Dropdown Content (Hidden by Default) */
-header > nav > div.dropdown > div.dropdown-content {
+header > div.container > nav > div.dropdown > div.dropdown-content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -95,20 +101,20 @@ header > nav > div.dropdown > div.dropdown-content {
 }
 
 /* Show the dropdown menu on hover */
-header > nav > div.dropdown:hover > div.dropdown-content {
+header > div.container > nav > div.dropdown:hover > div.dropdown-content {
     visibility: visible;
     opacity: 1;
     max-height: 15rem;
 }
 
 /* Links inside the dropdown */
-header > nav > div.dropdown > div.dropdown-content > a {
+header > div.container > nav > div.dropdown > div.dropdown-content > a {
     color: black;
     margin: 1rem auto;
 }
 
-header > nav a::before,
-header > nav button::before {
+header > div.container > nav a::before,
+header > div.container > nav button::before {
     content: '';
     position: absolute;
     display: block;
@@ -126,7 +132,7 @@ header > nav button::before {
     transition: width 0.3s;
 }
 
-header > nav a:hover::before,
-header > nav button:hover::before {
+header > div.container > nav a:hover::before,
+header > div.container > nav button:hover::before {
     width: 2.5rem;
 }
