--- a/site/themes/sogilis/assets/sass/576-767.scss
+++ b/site/themes/sogilis/assets/sass/576-767.scss
@@ -116,21 +116,6 @@ $light-electric-blue:#A7E4EA;
 	text-decoration:none;
 }
 
-//NAVIGATION
-.content_header{
-	display:none;
-}
-
-.content_header_scroll{
-	display:none;
-}
-
-
-.sub_menu{
-	display:none;
-}
-
-
 //MENU MOBILE
 
 .content-menu-mobile{
@@ -160,7 +145,7 @@ $light-electric-blue:#A7E4EA;
 		margin-top: 18px;
 		fill:#2384c4;
 	}
-	.menuBtn {
+	#headerMenuButtonMobile {
 		height: 30px;
 	    width: 30px;
 	    position: absolute;
@@ -213,7 +198,7 @@ $light-electric-blue:#A7E4EA;
 		}
 	}
 
-	.mainMenuMobile {
+	#headerMainMenuMobile {
 		background-color: #fff;
 		position: fixed;
 		left: 0;
@@ -277,7 +262,7 @@ $light-electric-blue:#A7E4EA;
 		}
 	}
 
-	.mainMenuMobile::before {
+	#headerMainMenuMobile::before {
 		content: '';
 	    display: block;
 	    height: 2px;
@@ -321,7 +306,7 @@ $light-electric-blue:#A7E4EA;
 		fill:#2384c4;
 	}
 
-	.menuBtn {
+	#headerMenuButtonMobile {
 		height: 30px;
 		width: 30px;
 
@@ -374,7 +359,7 @@ $light-electric-blue:#A7E4EA;
 			}
 		}
 	}
-.mainMenuMobile {
+#headerMainMenuMobile {
 		background-color: #fff;
 		position: fixed;
 		left: 0;
@@ -438,7 +423,7 @@ $light-electric-blue:#A7E4EA;
 		}
 	}
 
-	.mainMenuMobile::before {
+	#headerMainMenuMobile::before {
 		content: '';
 	    display: block;
 	    height: 2px;
