--- a/site/themes/sogilis/layouts/partials/head.html
+++ b/site/themes/sogilis/layouts/partials/head.html
@@ -6,7 +6,9 @@
 
         <!-- boostrap should be before header.css, otherwise the header display bug -->
         <link rel="stylesheet" href="{{ "css/bootstrap-4.0.0.min.css" | relURL }}">
-        <link rel="stylesheet" href="{{ "css/aos.css" | relURL }}" />
+
+        <!-- TODO Seems not to be useful -->
+        <!-- <link rel="stylesheet" href="{{ "css/aos.css" | relURL }}" /> -->
 
         {{ $styles := dict "(min-width: 1200px)" "sass/sup1200.scss" "(min-width: 992px) and (max-width: 1199px)" "sass/992-1199.scss" "(min-width: 768px) and (max-width: 991px)" "sass/768-991.scss" "(min-width: 576px) and (max-width: 767px)" "sass/576-767.scss" "(max-width: 575px)" "sass/inf576.scss" }}
         {{ range $media_query, $sass_style := $styles }}
@@ -23,11 +25,6 @@
         {{ $footer := resources.Get "css/footer.css" | minify | fingerprint }}
         <link rel="stylesheet" href="{{ $footer.Permalink }}" type="text/css" />
 
-
-        <script src="{{ "js/jquery-3.3.1.min.js" | relURL }}"></script>
-        <script src="{{ "js/aos.js" | relURL }}"></script>
-        <script src="{{ "js/js.cookie-2.0.4.min.js" | relURL }}"></script>
-        <script src="{{ "js/bootstrap-4.0.0.min.js" | relURL }}"></script>
 
         <link rel="icon" type="image/png" href="{{ "images/favicon.png" | relURL }}"/>
     </head>
